--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1 class="title">Love stories</h1>
             <section>
                 <a href="love.html">
-                    <img src="http://cdn.bakerpublishinggroup.com/processed/books/covers/listing/9781493417728.jpg?1558030926" alt="love-image" width="300px" height="500px" href="love.html" class="image">
+                    <img src="love.jpg" alt="love-image" width="300px" height="500px" href="love.html" class="image">
                 </a>
             </section>
         </section>
